--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" style="min-height: 86vh">
   <div class="d-flex">
 
     <div class="col-4 user-info-card">
