please yarn and bundle install

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -16,10 +16,7 @@
 @import "btn-form";
 @import "form-flex";
 @import "form-background";
-
-
-
-
+@import "animate.css/animate";
 
 #price-assessment {
   transition: opacity 2s;
