--- a/app/views/mothers/show.html.erb
+++ b/app/views/mothers/show.html.erb
@@ -75,8 +75,8 @@
               </button>
             </div>
             <div class="modal-body">
-              <p>You, <strong><%= @booking.user.name %></strong>,</p>
-              <p>Rented the mother <strong><%= @booking.mother.name %></strong></p>
+              <p>You, <strong></strong>,</p>
+              <p>Rented the mother <strong></strong></p>
               <p>Starting at: <strong><span id='modalStart'></span></strong></p>
               <p>Ending at: <strong><span id="modalEnd"></span></strong></p>
               <p>For a total price of <strong><span id="modalPrix"></span> </strong></p>
