--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -24,7 +24,7 @@
 
 
     <div class="user-right-column col-4 offset-1 mt-3" style="padding-right: 0; padding-left: 0">
-      <p class="mt-3"><strong>Requêtes en attente</strong></p>
+      <p class="mt-3"><strong>Ils veulent louer votre MILFR:</strong></p>
         <div>
           <% @requests.each do |booking| %>
             <div class="border shadow-sm rounded d-flex justify-content-between align-items-center p-2 mb-1" data-booking-div-id="<%= booking.id %>">
