hide reviews if youre the mother owner

--- a/app/views/mothers/show.html.erb
+++ b/app/views/mothers/show.html.erb
@@ -22,12 +22,12 @@
             <ul class="mother-icons list-inline">
               <li class="list-inline-item"> </li>
 
-              <li class="list-inline-item"><i class="fas fa-birthday-cake" style="margin-left: -10px"></i> Age</li>
-              <p><%= @mother.age%> Ans</p>
-              <li class="list-inline-item"><i class="fas fa-table-tennis"></i> Hobbies</li>
-              <p> <%= @mother.hobbies %> </p>
-              <li class="list-inline-item"><i class="fas fa-home"></i> Adresse</li>
-              <p><%= @mother.location %></p>
+              <li class="list-inline-item" style="font-size: 14px"><i class="fas fa-birthday-cake" style="margin-left: -10px"></i> Age</li>
+              <p><em><%= @mother.age%></em></p>
+              <li class="list-inline-item" style="font-size: 14px"><i class="fas fa-table-tennis"></i> Hobbies</li>
+              <p><em><%= @mother.hobbies %></em></p>
+              <li class="list-inline-item" style="font-size: 14px"><i class="fas fa-home"></i> Adresse</li>
+              <p><em><%= @mother.location %></em></p>
             </ul>
           </div>
           <!--   FIN DEPARTIE DE GAUCHE -->
