--- a/app/views/mothers/new.html.erb
+++ b/app/views/mothers/new.html.erb
@@ -8,7 +8,7 @@
             <div class="col-10 mt-3">
                <%= t.input :name , :label => "Nom de la MILFR"%>
             </div>
-            <div class="col-2">
+            <div class="col-2 mt-3">
             <%= t.input :age %>
             </div>
           </div>
