--- a/app/views/mothers/show.html.erb
+++ b/app/views/mothers/show.html.erb
@@ -5,11 +5,9 @@
      <!--  JE TRAVAILLE A PARTIR D ICI SUR LA DESCRIPTION -->
       <div class="mother-info">
     <!--     C EST LE HEADER -->
-        <div class="header d-flex justify-content-around align-items-stretch mother-info-card-top">
+        <div class="header d-flex justify-content-between align-items-center mother-info-card-top">
           <div class="mother-name">
-            <ul class="list-inline">
-              <li class="list-inline-item"><h5><%= @mother.name %></h5></li>
-            </ul>
+             <h5><%= @mother.name %></h5>
           </div>
           <div class="mother-price">
             <h5><%= @mother.price %>€</h5>
