--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -17,7 +17,7 @@
         </div>
         <div class="pt-3">
           <p><i class="fas fa-dollar-sign" style="color:#B71D12"></i> <%= @money %> euros recoltés avec tes MILFRs</p>
-          <p><i class="fas fa-handshake" style="color:#B71D12"></i> <%= @bookings.length %> Réservations faites</p>
+          <p><i class="fas fa-handshake" style="color:#B71D12"></i> <%= @bookings.length %> Locations effectuées</p>
         </div>
       </div>
     </div>
