--- a/app/assets/stylesheets/components/_user-info-card.scss
+++ b/app/assets/stylesheets/components/_user-info-card.scss
@@ -72,6 +72,7 @@
 .user-right-column-reviews {
   border-radius: 5px;
   margin-top: 15px;
+  margin-bottom: 10px;
   border: 1px solid rgba(0, 0, 0, 0.1);
 
   p {
