--- a/app/assets/stylesheets/pages/_mother_show.scss
+++ b/app/assets/stylesheets/pages/_mother_show.scss
@@ -1,3 +1,12 @@
 .mother-info-card-top {
   padding: 5px;
 }
+#own-mom-booking{
+  border-bottom: solid 1px lightgrey;
+
+}
+
+.own-mom-booking {
+    margin-top: 15px;
+    font-style: italic;
+  }
