--- a/app/views/mothers/_reviews-board.html.erb
+++ b/app/views/mothers/_reviews-board.html.erb
@@ -1,6 +1,6 @@
 <div class="reviews-info">
       <div class="reviews-header">
-        <h2>Reviews:</h2>
+        <h2>Commentaires:</h2>
       </div>
       <ul>
         <% @mother.reviews.each do |review| %>
