--- a/app/views/mothers/show.html.erb
+++ b/app/views/mothers/show.html.erb
@@ -45,18 +45,9 @@
       <div class="booking-card col-3 offset-1">
         <div class="container">
           <div class="flex-card-condition">
-            <h2 class="text-center py-5">Votre MILFR</h2>
-            <p class=" pb-3"><i class="fas fa-euro-sign" style="color:#B71D12"> Votre MILFR a gagné 0 euro</i></p>
-            <p class="mb-3"><i class="fas fa-female" style="color:#B71D12"> Votre MILFR a été louée 0 fois</i></p>
-
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <h6 class="pt-5">Meme si vous aimez enormement votre MILFR vous ne pouvez pas la louer, déso pas déso.</h6>
-
+            <h2 class="text-center py-5" id="own-mom-booking">Votre MILFR</h2>
+            <i class="fas fa-euro-sign pb-3 own-mom-booking" style="color:#B71D12"> Votre MILFR a gagné 0 euro</i>
+            <i class="fas fa-female mb-3 own-mom-booking" style="color:#B71D12"> Votre MILFR a été louée 0 fois</i>
           </div>
         </div>
       </div>
