--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -20,11 +20,11 @@
     </div>
     <div class="user-right-column col-6 offset-1">
       <div class="user-right-column-top">
-        <h1>Bonjour, je suis <%= @user.name %>!</h1>
+        <h1 style="font-size: 32px">Bonjour, je suis <%= @user.name %>!</h1>
         <p>Membre depuis le <%= @user.created_at.strftime("%d-%m-%Y") %></p>
 
         <p><i class="fas fa-quote-left"></i></p>
-        <p><em>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, placeat voluptate iusto tempore, fugiat officiis! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius, mollitia.</em></p>
+        <p><em>Depuis que j'ai découvert MILFR, ma vie a completement changée. J'ai beaucoup plus de temps libre que lorsque j'étais développeur fullstack, cerise sur le gateau, je gagne bien plus d'argent ! </em></p>
         <p class="text-sm-right"><i class="fas fa-quote-right"></i></p>
       </div>
         <h5>MILFRs de <%= @user.name %></h5>
