--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -24,7 +24,7 @@
         <p>Membre depuis le <%= @user.created_at.strftime("%d-%m-%Y") %></p>
 
         <p><i class="fas fa-quote-left"></i></p>
-        <p><em>Depuis que j'ai découvert MILFR, ma vie a completement changée. J'ai beaucoup plus de temps libre que lorsque j'étais développeur fullstack, cerise sur le gateau, je gagne bien plus d'argent ! </em></p>
+        <p><em>Depuis que j'ai découvert MILFR, ma vie a totalement changée. J'ai beaucoup plus de temps libre que lorsque j'étais développeur fullstack. Cerise sur le gâteau, je gagne encore mieux ma vie ! </em></p>
         <p class="text-sm-right"><i class="fas fa-quote-right"></i></p>
       </div>
         <h5>MILFRs de <%= @user.name %></h5>
